[package]
name = "infix_macro"
version = "0.1.1"
edition = "2021"
description = "Provides a macro that generates the neccesary boilerplate to use \"*operator*\" infix functions."
readme = "README.md"
repository = "https://github.com/PacificBird/Infix_Macro"
license-file = "UNLICENSE"
keywords = ["macro"]
categories = ["rust-patterns"]

[dependencies]
